# aib

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: REQUIREMENTS.md
scripts/: shell-integration.sh
src/aib/: __init__.py  __main__.py  cli.py  config.py  picker.py  prompt.py  shell.py
src/aib/backend/: __init__.py  base.py  claude.py
tests/: test_claude_backend.py  test_cli.py  test_config.py  test_shell.py
