[project]
name = "aib"
version = "0.1.0"
description = "AI in Bash — AI-powered command helper for the terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
_aib = "aib.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
