[project]
name = "aib"
version = "0.1.0"
description = "AI in Bash — AI-powered command helper for the terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Martin Blaha", email = "martin.blaha@gmail.com"}]
keywords = ["cli", "shell", "ai", "terminal", "command-line"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Shells",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
_aib = "aib.cli:main"

[project.urls]
Homepage = "https://github.com/martinblaha/aib"
Repository = "https://github.com/martinblaha/aib"
Issues = "https://github.com/martinblaha/aib/issues"

[build-system]
requires = ["uv_build>=0.9.18"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
